# llmtrend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.dashboard  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/analytics/: __init__.py  forecasting.py  llm_analyzer.py  niches.py  signals.py  trends.py
app/api/: schemas.py
app/api/routes/: __init__.py  models.py  niches.py  overview.py  reports.py  settings.py  signals.py
app/collectors/: __init__.py  arxiv_collector.py  base.py  github_collector.py  huggingface.py
app/models/: __init__.py  arxiv_paper.py  base.py  collection_run.py  github_repo.py  hf_model.py  niche.py  report.py  trend_signal.py
app/services/: __init__.py  collector_service.py  export_service.py  report_generator.py
app/tasks/: __init__.py  analytics_tasks.py  celery_app.py  collection_tasks.py
app/utils/: helpers.py  rate_limiter.py
bot/: api_client.py  config.py  formatters.py  keyboards.py  main.py  middleware.py
bot/handlers/: __init__.py  reports.py  search.py  settings.py  signals.py  start.py
dashboard/: api_client.py  app.py  config.py
dashboard/components/: __init__.py  cards.py  charts.py  filters.py
dashboard/pages/: 01_overview.py  02_niches.py  03_models.py  04_research.py  05_github.py  06_signals.py  07_reports.py  08_settings.py
dashboard/static/: style.css
requirements/: api.txt  base.txt  bot.txt  dashboard.txt  dev.txt
scripts/: healthcheck.py  init_db.py  ollama-entrypoint.sh  run_collection.py  seed_demo_data.py
